# static-analyzer-program

./: README.md
Team09/Code09/src/integration_testing/: CMakeLists.txt
Team09/Code09/src/integration_testing/src/: TestFrontEnd.cpp
Team09/Code09/src/integration_testing/src/SIMPLESourceFiles/: Program02.txt  Program04.txt  Program05_with numberings.txt
Team09/Code09/src/spa/: CMakeLists.txt
Team09/Code09/src/spa/src/adt/: Table.cpp  Table.h
Team09/Code09/src/spa/src/frontend/: CallGraph.cpp  CallGraph.h  DesignExtractor.cpp  DesignExtractor.h  FrontEnd.cpp  FrontEnd.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SimplifiedAST.cpp  SimplifiedAST.h
Team09/Code09/src/spa/src/pkb/: AffectStorage.cpp  AffectStorage.h  CallStorage.cpp  CallStorage.h  FollowStorage.cpp  FollowStorage.h  GeneralStorage.cpp  GeneralStorage.h  Hasher.h  ModifyStorage.cpp  ModifyStorage.h  NextStorage.cpp  NextStorage.h  PKB.cpp  PKB.h  ParentStorage.cpp  ParentStorage.h  PatternStorage.cpp  PatternStorage.h  StatementStruct.h  UseStorage.cpp  UseStorage.h  constants.h
Team09/Code09/src/spa/src/pql/evaluator/: QueryEvaluator.cpp  QueryEvaluator.h
Team09/Code09/src/spa/src/pql/optimizer/: Optimizer.cpp  Optimizer.h
Team09/Code09/src/spa/src/pql/parser/: QueryParser.cpp  QueryParser.h  QueryParserHelper.cpp  QueryParserHelper.h
Team09/Code09/src/unit_testing/: CMakeLists.txt
Team09/Code09/src/unit_testing/src/frontend/: ParserTest.cpp  TestDesignExtractor.cpp  TestLexer.cpp  TestSimplifiedAST.cpp
Team09/Code09/src/unit_testing/src/frontend/LexerTestFiles/: Test-1_3.txt  Test-1_4.txt  Test-2_3.txt  Test-2_8.txt
Team09/Code09/src/unit_testing/src/frontend/ParserTestFiles/: Test-10.txt  Test-1_3.txt  Test-5.txt  Test-6.txt  (+25 more)
Team09/Code09/src/unit_testing/src/pkb/: TestAffectStorage.cpp  TestCallStorage.cpp  TestFollowStorage.cpp  TestGeneralStorage.cpp  TestModifyStorage.cpp  TestNextStorage.cpp  TestPKB.cpp  TestParentStorage.cpp  TestPatternStorage.cpp  TestUseStorage.cpp
Team09/Code09/src/unit_testing/src/pql/: PatternQueryTest.cpp  QueryParserHelperTest.cpp  QueryParserTest.cpp  SelectClauseTest.cpp  SuchThatQueryTest.cpp  TestOptimizer.cpp  TestQueryEvaluator.cpp  TestQueryEvaluatorPKB.cpp  TestTableAdt.cpp  TestUtility.cpp  TestUtility.h  WithQueryTest.cpp
(+72 files in other folders)
